[tool.poetry]
name = "archaea"
version = "1.0.0"
description = "Playground for geometry."
readme = "README.md"
authors = ["Oğuzhan Koral <oguzhankoral@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/archaeans/archaea"
keywords = ["geometry", "mesh", "stl", "triangulation"]
classifiers = [
        'Development Status :: 3 - Alpha',

        # Indicate who your project is intended for
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'Topic :: Multimedia :: Graphics :: 3D Modeling',
        'Topic :: Scientific/Engineering :: Mathematics',

        # Pick your license as you wish
        'License :: OSI Approved :: Apache Software License',

        # Specify the Python versions you support here. In particular, ensure
        # that you indicate whether you support Python 2, Python 3 or both.
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.11',
    ]
packages = [
    { include = "archaea", from = "."}
]

exclude = [
    "archaea/extensions",
    "archaea/format"
]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
numpy = "^1.24.2"
numpy-stl = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.7.0"
pytest = "^7.1.3"
pytest-ordering = "^0.6"
pytest-cov = "^3.0.0"
devtools = "^0.8.0"
pylint = "^2.14.4"
mypy = "^0.982"
pre-commit = "^2.20.0"
commitizen = "^2.38.0"
ruff = "^0.0.187"
types-deprecated = "^1.2.9"
types-ujson = "^5.6.0.0"
types-requests = "^2.28.11.5"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.9.2"
tag_format = "$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"